--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -11,7 +11,7 @@
 
     &__article2 {
       height: 100%;
-      background-color: rgb(241, 241, 241);
+      background-color: $color-fondo;
       padding-top: 15rem;
       border: none; 
     
@@ -25,7 +25,7 @@
     
     &__article {
       height: 100%;
-      background-color: rgb(241, 241, 241);
+      background-color: $color-fondo;
       padding-top: 5rem;
       border: none;
 
@@ -38,8 +38,8 @@
         &__div{
           margin-bottom: 3rem;
           &__div{
-            border-radius: 3rem !important;
-            box-shadow: 0.6rem 0.6rem 3rem 0.4rem #979797;
+            border-radius: 3rem;
+            box-shadow: $size-shadow $color-shadow;
             &__div-foto-m{
               overflow: hidden;
               border-radius: 2.5rem 2.5rem 0rem 0rem; 
@@ -69,11 +69,11 @@
   align-items: center;
 
       &__h2{
-        width: 100%;
+        width:$size-width;
     }
 
       &__p{
-        width: 100%;
+        width: $size-width;
     }
 
     .sectionM__article__div__div__div__div-texto-m__div{
