--- a/scss/_bebidas.scss
+++ b/scss/_bebidas.scss
@@ -12,7 +12,7 @@
 
     &__article2 {
         height: 100%;
-        background-color: rgb(241, 241, 241);
+        background-color: $color-fondo;
         padding-top: 15rem;
         border: none; 
 
@@ -26,7 +26,7 @@
 
     &__article {
         height: 100%;
-        background-color: rgb(241, 241, 241);
+        background-color: $color-fondo;
         padding-top: 5rem;
         border: none;
 
