--- a/scss/_contactos.scss
+++ b/scss/_contactos.scss
@@ -7,11 +7,12 @@
     }
 
     &__consulta{
+
         padding: 17rem 0rem 5rem 0rem;
         &__form{
             width: $size-width;
-            background-color: rgba(241, 241, 241, 0.938);
-            height: 62.5rem;
+            background-color: $color-fondo;
+            height: 100%;
             &__h2{
                 text-align: center;
                 padding-top: 2rem;
