--- a/scss/_@media.scss
+++ b/scss/_@media.scss
@@ -192,10 +192,12 @@
     @media (max-width: 768px) {
         
         .carrusel{
-            padding: 4rem 0 !important;
+            padding: 4rem 0;
             &__article{
+                width: 100%;
                 &__div{
-                    width: 100% !important;
+                    width: 100%;
+                    margin: 0;
                 }
             }
         }
