--- a/scss/_@media.scss
+++ b/scss/_@media.scss
@@ -194,9 +194,7 @@
         .carrusel{
             padding: 4rem 0;
             &__article{
-                width: 100%;
                 &__div{
-                    width: 100%;
                     margin: 0;
                 }
             }
@@ -205,7 +203,7 @@
         .carrusel__article__div__div__div__div{
             &__a{
                 font-size: 1.5rem;
-                padding: 0.5rem 3.5rem !important;
+                padding: 0.5rem 3.5rem;
             }
         }
     }
