--- a/scss/_@media.scss
+++ b/scss/_@media.scss
@@ -278,19 +278,19 @@
         
         .sectionB{
             &__article2{
-                padding-top: 3rem !important;
+                padding-top: 3rem;
                 &__title{
                     &__h2{
-                        font-size: 4rem !important;
+                        font-size: 4rem;
                     }
                 }
             }
     
             &__article{
-                padding-top: 2rem !important;
+                padding-top: 2rem;
                 &__title{
                     &__h2{
-                        font-size: 4rem !important;
+                        font-size: 4rem;
                     }
                 }
 //--------------------------------------------------
@@ -321,10 +321,10 @@
     .sectionN{
         &__article{
             &__div{
-                margin: 5rem 0 0 0 !important;
+                margin: 5rem 0 0 0;
             }
             &__div-texto-n{
-                margin: 4rem 0 !important;
+                margin: 4rem 0;
             }
         }
     }
@@ -339,10 +339,10 @@
 @media (max-width: 768px) {
     .sectionC{
         &__article{
-            padding: 5rem 0 0 0 !important;
+            padding: 5rem 0 0 0;
         }
         &__consulta{
-            padding: 5rem 0 0 0 !important;
+            padding: 5rem 0 0 0;
         }
     }
 }
