--- a/scss/_@media.scss
+++ b/scss/_@media.scss
@@ -41,7 +41,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
+            width: $size-width;
             height: 4px;
             background-color:black;
             transform: scaleX(0);
@@ -59,7 +59,7 @@
             position: absolute;
             bottom: 0;
             right: 0;
-            width: 100%;
+            width: $size-width;
             height: 4px;
             background-color:black;
             transform: scaleX(0);
@@ -114,7 +114,7 @@
         .header__nav__text__ul__li__div{
             font-size: 1.8rem;
             margin: 0.5rem 0;
-            width: 100%;
+            width: $size-width;
 
             &__a{
                 font-size: 1.8rem;
@@ -195,6 +195,7 @@
             padding: 4rem 0;
             &__article{
                 &__div{
+                    width:100%;
                     margin: 0;
                 }
             }
