--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -34,7 +34,7 @@
         &__article{
             &__div{
                 box-shadow: $color-shadow $size-shadow;
-                width: 75% !important;
+                width: 75%;
             }
         }
     }
