--- a/scss/_bootstrap.scss
+++ b/scss/_bootstrap.scss
@@ -163,6 +163,7 @@
             &__div{
                 @extend .m-auto;
                 @extend .row;
+                @extend .pt-4;
 
 //--------------------------------------------------
                 //SECTOR IMG
