--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -41,8 +41,8 @@
                         font-size: 1.8rem;
                         line-height: 5rem;
                         text-align: justify;
-                        margin: 5rem 8rem 5rem 8rem;  
-                        padding: 4rem 4rem 4rem 4rem;
+                        margin: 5rem 8rem 5em 8rem;  
+                        padding: 4rem 4rem 9rem 4rem;
                         border: solid black 0.5rem; 
                     }
         
