--- a/scss/_@media.scss
+++ b/scss/_@media.scss
@@ -13,10 +13,11 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
-
-            &__img {
-                width: 20rem;
-                padding: 0rem;
+            &__a{
+                &__img {
+                    width: 20rem;
+                    padding: 0rem;
+                }
             }
         }
     }
